--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    def dagger_version = "2.27"
+    def dagger_version = "2.28"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
-    def retrofit_version = "2.8.1"
+    def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
@@ -55,4 +55,13 @@ dependencies {
 
     def glide_version = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    def live_data_version = "2.3.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$live_data_version"
+
+    def view_model_scope_version = "2.3.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$view_model_scope_version"
+
+    
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
