--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,6 @@ dependencies {
     def view_model_scope_version = "2.3.0-beta01"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$view_model_scope_version"
 
-    
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    def life_cycle_extension_version = "2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$life_cycle_extension_version"
 }
